--- a/TheSecondTestWork/rewriting1/Task1/Task1.vcxproj.filters
+++ b/TheSecondTestWork/rewriting1/Task1/Task1.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="f.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="g.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
